--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -56,243 +56,20 @@ Liga Profesional: Boca Juniors vs Deportivo Riestra<span class="t">00:00</span><
 
 
 
-
-
-<li class="FRA"><a href="#">
-Ligue 1: Reims vs. Brest<span class="t">19:00</span></a>
+<li class="AR"><a href="#">
+Liga Profesional: Atlético Tucumán vs Lanús<span class="t">02:15</span></a>
 <ul>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT10bnRzcG9ydHNfYXJnZW50aW5h" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="AR"><a href="#">
+Liga Profesional: Talleres Córdoba vs Tigre<span class="t">02:15</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/espn-premium" target="_blank">ESPN Premium<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czEx" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
 </ul>
 </li>
-
-<li class="POR"><a href="#">
-Primeira Liga: Boavista vs. Moreirense<span class="t">19:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9U1BPUlRfVFZfMlBU" target="_blank">Sport TV2 PT<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="ECUA"><a href="#">
-LigaPro: Libertad vs. Aucas<span class="t">20:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1ldmVudG9zMg==" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="ARA"><a href="#">
-Liga Profesional: Al Hilal vs. Al Taawon<span class="t">20:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9U1NDMQ==" target="_blank">SSC Sports 1 SA<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="AR"><a href="#">
-Primera B Nacional: Colón vs. Deportivo Madryn<span class="t">20:05</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/tyc-sports" target="_blank">TyC Sports<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="IT"><a href="#">
-Serie A: Atalanta vs. Hellas Verona<span class="t">20:45</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czEy" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="BEL"><a href="#">
-Liga Profesional: Sint-Truiden vs. Westerlo<span class="t">20:45</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czEz" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="FRA"><a href="#">
-Ligue 1: Lens vs. Lille<span class="t">21:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czE0" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="ES"><a href="#">
-LaLiga: Real Madrid vs. Barcelona<span class="t">21:00</span></a>
-<ul>
-	<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9jYW5kbGVyLmJlYXV0eS92b2QuaHRtbD9nZXQ9aHR0cHM6Ly92b29kYy5jb20vZW1iZWQvODU4YTkzOTBhMjhhOGM5Mzg3OTk4Mzg3OTM4Yzk4ODg4NTk0Lmh0bWw=" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-
-	
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9REFaTl9MQV9MSUdB" target="_blank">ES<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9TEFMSUdBVFZfR0I=" target="_blank"> TV GB<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDIucGhwP3N0cmVhbT1lc3BuX2RlcG9ydGVz" target="_blank">ESPN Deportes USA<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="POR"><a href="#">
-Primeira Liga: Famalicão vs. Sporting CP<span class="t">21:30</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1zcG9ydHZfMXB0" target="_blank">Sport TV1 PT<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="BRA"><a href="#">
-Brasileirão: Grêmio vs. Atlético Goianiense<span class="t">21:30</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9UFJFTUlFUkUzX0JS" target="_blank">Premiere 3 BR<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="BRA"><a href="#">
-Brasileirão: Vitória vs. Fluminense<span class="t">21:30</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9UFJFTUlFUkVfNEJS" target="_blank">Premiere 4 BR<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="BRA"><a href="#">
-Brasileirão: Flamengo vs. Juventude<span class="t">21:30</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9UFJFTUlFUkVfQlI=" target="_blank">Premiere BR<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="BRA"><a href="#">
-Brasileirão: Palmeiras vs. Fortaleza<span class="t">21:30</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9UFJFTUlFUkUyX0JS" target="_blank">Premiere 2 BR<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="AR"><a href="#">
-Liga Profesional: Newell's Old Boys vs. Sarmiento<span class="t">22:15</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT10bnRzcG9ydHNfYXJnZW50aW5h" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="AR"><a href="#">
-Liga Profesional: Instituto vs. Rosario Central<span class="t">22:15</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/espn-premium" target="_blank">ESPN Premium<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czE1" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="ECUA"><a href="#">
-LigaPro: Universidad Católica vs. Emelec<span class="t">22:30</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1ldmVudG9zMg==" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="F1"><a href="#">
-F1: GP México: Clasificación<span class="t">23:00</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/espn-2" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/fox-sports-1" target="_blank">Fox Sports<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1mb3hzcG9ydHNwcmVtaXVt" target="_blank">Fox Sports Premium<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA1" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="F1"><a href="#">
-F1: GP México: Clasificación (Cámara On Board)<span class="t">23:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA2" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="F1"><a href="#">
-F1: GP México: Clasificación (Cámara On Board) Colapinto<span class="t">23:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA3" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="UFC"><a href="#">
-UFC: UFC 308 | Ilia Topuria vs. Max Holloway<span class="t">23:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1ldmVudG9zOQ==" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1mb3hzcG9ydHNwcmVtaXVt" target="_blank">Fox Sports Premium<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="BRA"><a href="#">
-Brasileirão: Athletico-PR vs. Cruzeiro<span class="t">23:30</span></a>
-<ul>
-</ul>
-</li>
-
-<li class="BRA"><a href="#">
-Brasileirão: Atlético Mineiro vs. Internacional<span class="t">23:30</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9UFJFTUlFUkUyX0JS" target="_blank">Premiere 2 BR<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="BRA"><a href="#">
-Brasileirão: RB Bragantino vs. Botafogo<span class="t">23:30</span></a>
-<ul>
-</ul>
-</li>
-
-
-
-<li class="AR"><a href="#">
-Liga Profesional: Independiente vs. Godoy Cruz<span class="t">01:30</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/espn-premium" target="_blank">ESPN Premium<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czAx" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="ECUA"><a href="#">
-LigaPro: LDU Quito vs. Mushuc Runa<span class="t">02:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1ldmVudG9zMg==" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="PE"><a href="#">
-Liga 1: Deportivo Garcilaso vs. Alianza Lima<span class="t">02:00</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/liga1-max-en-vivo" target="_blank">Liga 1 MAX<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="COSTARICA"><a href="#">
-Primera División: Cartaginés vs. Deportivo Saprissa<span class="t">02:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1mdXR2" target="_blank">FUTV<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="MEX"><a href="#">
-Liga MX: León vs. Querétaro<span class="t">02:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1mb3hzcG9ydHNwcmVtaXVt" target="_blank">Fox Sports Premium<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="MEX"><a href="#">
-Liga MX: Pumas UNAM vs. Cruz Azul<span class="t">03:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT10dWRuX3VzYQ==" target="_blank">EVENTO USA<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="MLB"><a href="#">
-MLB: Dodgers vs. Yankees<span class="t">03:08</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czAz" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
-<li class="AR"><a href="#">
-Liga Profesional: Vélez Sarsfield vs. Belgrano<span class="t">03:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT10bnRzcG9ydHNfYXJnZW50aW5h" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-</ul>
-</li>
-
 
 </ul>
 </div>
