--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -42,14 +42,12 @@
 </div>
 </center>
 
-<li class="LIB"><a href="#">
-Copa Libertadores (2/2): River Plate vs. Atlético Mineiro<span class="t">02:30</span></a>
+<li class="AR"><a href="#">
+Liga Profesional: Lanús vs. Boca Juniors<span class="t">00:30</span></a>
 <ul>
-<li class="subitem1"><a href="/en-vivo/espn-2" target="_blank">ESPN 2<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/fox-sports-1" target="_blank">Fox Sports<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czAz" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT10ZWxlZmU=" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czE1" target="_blank">EVENTO (BR)<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/en-vivo/espn-1" target="_blank">ESPN<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT10bnRzcG9ydHNfYXJnZW50aW5h" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czAy" target="_blank">EVENTO<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
